Fixed too much space under button

--- a/client/main.css
+++ b/client/main.css
@@ -15,10 +15,9 @@ body{
 
 .forresult{ 
 	margin: 15 auto; 
-	margin-top: 20px;  
-	text-align: center; 
-	font-size: 30px; 
-	padding: 0 10px; 
+	margin-top: 0px;
+	text-align: center;
+	font-size: 18px; 
 	text-shadow: 1px 1px 3px #000000; 
 }
 
